fastapi-service.yaml
# fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: standard
spec:
  selector:
    app: fastapi
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
