postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: standard
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
